# ks-cookbook

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INDUSTRIES.md  Makefile  README.md  SECURITY.md  demo  docs-audit.json  e2e-report.json  e2e_recipes_full_sweep.json  e2e_recipes_merged.json  e2e_recipes_report.json  e2e_recipes_report_batch1.json  e2e_recipes_retry.json  pyproject.toml  pyrightconfig.json
flagships/adverse_event_narrative/: README.md  pyproject.toml
flagships/adverse_event_narrative/sample_inputs/: event.txt
flagships/adverse_event_narrative/src/adverse_event_narrative/: __init__.py  __main__.py  agent.py  schema.py
flagships/aml_sar_narrative/: README.md  pyproject.toml
flagships/aml_sar_narrative/sample_inputs/: case.md
flagships/aml_sar_narrative/src/aml_sar_narrative/: __init__.py  __main__.py  agent.py  schema.py
flagships/api_doc_generator/: README.md  pyproject.toml
flagships/api_doc_generator/sample_inputs/: endpoint.txt
flagships/api_doc_generator/src/api_doc_generator/: __init__.py  __main__.py  agent.py  schema.py
flagships/audit_defensible_hcc_coder/: README.md  pyproject.toml
flagships/audit_defensible_hcc_coder/sample_inputs/: chart.md
flagships/audit_defensible_hcc_coder/src/hcc_coder/: __init__.py  __main__.py  agent.py  schema.py
flagships/audit_workpaper_drafter/: README.md  pyproject.toml
flagships/audit_workpaper_drafter/sample_inputs/: ar_audit_request.txt
flagships/audit_workpaper_drafter/src/audit_workpaper_drafter/: __init__.py  __main__.py  agent.py  schema.py
flagships/chiro_visit_autopilot/: README.md  pyproject.toml  sample_output_coding.xlsx  sample_output_patient_plan.md  sample_output_prior_auth.docx
flagships/chiro_visit_autopilot/sample_inputs/: visit.md
flagships/chiro_visit_autopilot/src/chiro_autopilot/: __init__.py  __main__.py  agent.py  schema.py
flagships/claim_adjudication_memo/: README.md  pyproject.toml
flagships/claim_adjudication_memo/sample_inputs/: claim.txt
flagships/claim_adjudication_memo/src/claim_adjudication_memo/: __init__.py  __main__.py  agent.py  schema.py
flagships/claims_denial_rebuttal_drafter/: README.md  pyproject.toml
flagships/claims_denial_rebuttal_drafter/sample_inputs/: denial.md
flagships/claims_denial_rebuttal_drafter/src/claims_rebuttal/: __init__.py  __main__.py  agent.py  schema.py
flagships/clinical_trial_eligibility/: README.md  pyproject.toml
flagships/clinical_trial_eligibility/sample_inputs/: patient.txt
flagships/clinical_trial_eligibility/src/clinical_trial_eligibility/: __init__.py  __main__.py  agent.py  schema.py
flagships/compliance_questionnaire/: README.md  pyproject.toml
flagships/compliance_questionnaire/sample_inputs/: caiq_v4.xlsx
flagships/compliance_questionnaire/src/compliance_questionnaire/: __init__.py  __main__.py  agent.py  schema.py  workbook.py
flagships/condo_board_decision_pack/: README.md  pyproject.toml
flagships/condo_board_decision_pack/sample_inputs/: request.md
flagships/condo_board_decision_pack/src/condo_board_decision/: __init__.py  __main__.py  agent.py  schema.py
flagships/construction_rfi_agent/: README.md  pyproject.toml
flagships/construction_rfi_agent/sample_inputs/: rfi.md
flagships/construction_rfi_agent/src/construction_rfi_agent/: __init__.py  __main__.py  agent.py  schema.py
flagships/contract_obligation_extractor/: README.md  pyproject.toml
flagships/contract_obligation_extractor/sample_inputs/: README.md
flagships/contract_obligation_extractor/src/contract_obligation_extractor/: __init__.py  __main__.py  agent.py  schema.py
flagships/contract_redline_with_provenance/: README.md  pyproject.toml
flagships/contract_redline_with_provenance/sample_inputs/: draft.md
flagships/contract_redline_with_provenance/src/contract_redline/: __init__.py  __main__.py  agent.py  schema.py
flagships/conversational_sdr_bot/: README.md  pyproject.toml
flagships/conversational_sdr_bot/sample_inputs/: prospect.md
flagships/conversational_sdr_bot/src/conversational_sdr_bot/: __init__.py  __main__.py  agent.py  schema.py
flagships/credit_memo_drafter/: README.md  pyproject.toml
flagships/credit_memo_drafter/sample_inputs/: loan_request.md
flagships/credit_memo_drafter/src/credit_memo_drafter/: __init__.py  __main__.py  agent.py  schema.py
flagships/csv_enrichment/: README.md  pyproject.toml
flagships/csv_enrichment/sample_inputs/: customers.csv
flagships/csv_enrichment/src/csv_enrichment/: __init__.py  __main__.py  graph.py  schema.py
flagships/earnings_risk_analyzer/: README.md  pyproject.toml
flagships/earnings_risk_analyzer/sample_inputs/: filing.md
flagships/employee_handbook_qa/: README.md  pyproject.toml
flagships/employee_handbook_qa/sample_inputs/: question.txt
flagships/foia_response_drafter/: README.md  pyproject.toml
flagships/foia_response_drafter/sample_inputs/: request.txt
flagships/grant_compliance_checker/: README.md  pyproject.toml
flagships/grant_compliance_checker/sample_inputs/: activity.txt
flagships/incident_runbook_lookup/: README.md  pyproject.toml
flagships/incident_runbook_lookup/sample_inputs/: alert.txt
flagships/insurance_policy_comparison/: README.md  pyproject.toml
flagships/insurance_policy_comparison/sample_inputs/: scenario.txt
flagships/job_description_generator/: README.md  pyproject.toml
flagships/job_description_generator/sample_inputs/: role.txt
flagships/kyc_onboarding_review/: README.md  pyproject.toml
flagships/kyc_onboarding_review/sample_inputs/: customer.md
flagships/lease_abstract/: README.md  pyproject.toml
flagships/lease_abstract/sample_inputs/: lease.txt
flagships/legal_matter_intake/: README.md  pyproject.toml
flagships/legal_matter_intake/sample_inputs/: matter.md
flagships/loan_covenant_monitor/: README.md  pyproject.toml
flagships/loan_covenant_monitor/sample_inputs/: borrower.txt
flagships/msa_redline_vs_playbook/: README.md  pyproject.toml
flagships/msa_redline_vs_playbook/sample_inputs/: inbound.md
(+540 files in other folders)
