[project]
name = "ks-cookbook-ae-narrative"
version = "0.1.0"
description = "Pharma flagship — CIOMS adverse-event narrative from drug label + PV SOP (LangGraph ReAct)."
readme = "README.md"
keywords = ["pharma", "pharmacovigilance", "cioms", "safety"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-ae-narrative = "adverse_event_narrative.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adverse_event_narrative"]

[tool.ruff]
line-length = 88
target-version = "py311"
