[project]
name = "ks-cookbook-sar-narrative"
version = "0.1.0"
description = "Banking flagship — draft a FinCEN-format SAR narrative grounded in case evidence."
readme = "README.md"
keywords = ["banking", "aml", "sar", "compliance"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-sar-narrative = "aml_sar_narrative.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aml_sar_narrative"]
