[project]
name = "ks-cookbook-api-doc"
version = "0.1.0"
description = "Endpoint name → developer docs grounded in API spec + style guide."
readme = "README.md"
keywords = ["engineering", "api", "documentation", "devex"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-api-doc = "api_doc_generator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_doc_generator"]
