[project]
name = "ks-cookbook-hcc-coder"
version = "0.1.0"
description = "Healthcare flagship — assign HCC / ICD-10 codes with line-level rationales and chunk-level source citations for CMS audit defense."
readme = "README.md"
keywords = ["healthcare", "hcc", "risk-adjustment", "coding"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
    "openpyxl>=3.1",
]

[project.scripts]
ks-cookbook-hcc-coder = "hcc_coder.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hcc_coder"]
