[project]
name = "ks-cookbook-audit-workpaper"
version = "0.1.0"
description = "Accounting flagship — draft cited audit workpapers tying GL balances to source documents (LangGraph ReAct)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-audit-workpaper = "audit_workpaper_drafter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_workpaper_drafter"]

[tool.ruff]
line-length = 88
target-version = "py311"
