[project]
name = "ks-cookbook-chiro-autopilot"
version = "0.1.0"
description = "ChiroCRM flagship — from one SOAP note produce three cited artifacts: coding xlsx, prior-auth letter docx, and a patient-friendly plan-of-care."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[project.scripts]
ks-cookbook-chiro-autopilot = "chiro_autopilot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chiro_autopilot"]
