[project]
name = "ks-cookbook-claim-memo"
version = "0.1.0"
description = "P&C claim summary → coverage-analysis memo grounded in policy wording (LangGraph ReAct)."
readme = "README.md"
keywords = ["insurance", "claims", "coverage-analysis", "p-and-c"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-claim-memo = "claim_adjudication_memo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claim_adjudication_memo"]

[tool.ruff]
line-length = 88
target-version = "py311"
