[project]
name = "ks-cookbook-claims-rebuttal"
version = "0.1.0"
description = "Healthcare flagship — draft a payer-ready claim denial rebuttal letter grounded in the patient chart + payer medical policy corpus."
readme = "README.md"
keywords = ["insurance", "claims", "appeals", "rebuttal"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
    "python-docx>=1.1",
]

[project.scripts]
ks-cookbook-claims-rebuttal = "claims_rebuttal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claims_rebuttal"]
