[project]
name = "ks-cookbook-trial-eligibility"
version = "0.1.0"
description = "Healthcare flagship — patient eligibility assessment against real clinical trial criteria (pydantic-ai)."
readme = "README.md"
keywords = ["healthcare", "clinical-trials", "eligibility", "ctms"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-trial-eligibility = "clinical_trial_eligibility.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_trial_eligibility"]

[tool.ruff]
line-length = 88
target-version = "py311"
