[project]
name = "ks-cookbook-compliance-questionnaire"
version = "0.1.0"
description = "Auto-fill security/compliance questionnaires (CAIQ, SIG-like) from your KS tenant."
readme = "README.md"
keywords = ["security", "compliance", "caiq", "sig", "questionnaires"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "openpyxl>=3.1",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-compliance = "compliance_questionnaire.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_questionnaire"]
