[project]
name = "ks-cookbook-rfi-agent"
version = "0.1.0"
description = "Construction flagship — draft a cited RFI response cross-referencing CSI specs, drawings, and prior submittals."
readme = "README.md"
keywords = ["engineering", "construction", "rfi", "field-ops"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-rfi-agent = "construction_rfi_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/construction_rfi_agent"]
