[project]
name = "ks-cookbook-contract-obligations"
version = "0.1.0"
description = "Legal flagship — extract every shall/must/will obligation from a contract, grouped by obligation-holder, with [chunk:<uuid>] citations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "openai>=1.50",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-contract-obligations = "contract_obligation_extractor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contract_obligation_extractor"]

[tool.ruff]
line-length = 88
target-version = "py311"
