[project]
name = "ks-cookbook-credit-memo"
version = "0.1.0"
description = "Banking flagship — draft a credit memo grounded in a borrower's financials + the bank's credit policy."
readme = "README.md"
keywords = ["banking", "credit-risk", "underwriting", "commercial-lending"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-credit-memo = "credit_memo_drafter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/credit_memo_drafter"]
