[project]
name = "ks-cookbook-csv-enrichment"
version = "0.1.0"
description = "LangGraph agent that enriches CSV rows using the KS knowledge base via MCP."
readme = "README.md"
keywords = ["sales", "data-enrichment", "batch", "operations"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-mcp-adapters>=0.0.5",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
ks-cookbook-csv-enrich = "csv_enrichment.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_enrichment"]
