[project]
name = "ks-cookbook-handbook-qa"
version = "0.1.0"
description = "Employee question → cited answer from the company handbook."
readme = "README.md"
keywords = ["hr", "handbook", "q-and-a"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-handbook-qa = "employee_handbook_qa.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/employee_handbook_qa"]
