[project]
name = "ks-cookbook-foia-response"
version = "0.1.0"
description = "Government flagship — FOIA response letter with exemption analysis (raw OpenAI + MCP)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "openai>=1.50",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-foia-response = "foia_response_drafter.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foia_response_drafter"]

[tool.ruff]
line-length = 88
target-version = "py311"
