[project]
name = "ks-cookbook-grant-compliance"
version = "0.1.0"
description = "Sub-awardee activity → compliance check citing the NOFO + federal regs."
readme = "README.md"
keywords = ["government", "grants", "compliance", "cfr"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-grant-compliance = "grant_compliance_checker.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grant_compliance_checker"]
