[project]
name = "ks-cookbook-runbook"
version = "0.1.0"
description = "PagerDuty alert → matched runbook section with cited remediation steps."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-runbook = "incident_runbook_lookup.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/incident_runbook_lookup"]
