[project]
name = "ks-cookbook-policy-compare"
version = "0.1.0"
description = "Current vs proposed policy → side-by-side analysis with coverage gaps."
readme = "README.md"
keywords = ["insurance", "policy-comparison", "coverage"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-policy-compare = "insurance_policy_comparison.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_policy_comparison"]
