[project]
name = "ks-cookbook-jd-generator"
version = "0.1.0"
description = "Role title → full JD grounded in leveling criteria + comp bands."
readme = "README.md"
keywords = ["hr", "recruiting", "job-descriptions"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-jd-generator = "job_description_generator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_description_generator"]
