[project]
name = "ks-cookbook-kyc-review"
version = "0.1.0"
description = "Banking flagship — KYC/CDD onboarding review with checklist, risk tier, and policy citations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai[mcp]>=0.0.14",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-kyc-review = "kyc_onboarding_review.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kyc_onboarding_review"]
