[project]
name = "ks-cookbook-lease-abstract"
version = "0.1.0"
description = "Commercial lease → one-page cited lease abstract (raw OpenAI function calling)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "ksapi>=0.1.0",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-lease-abstract = "lease_abstract.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lease_abstract"]

[tool.ruff]
line-length = 88
target-version = "py311"
