[project]
name = "ks-cookbook-covenant-monitor"
version = "0.1.0"
description = "Banking flagship — compare quarterly financials against credit agreement covenants, flag breaches with citations."
readme = "README.md"
keywords = ["banking", "covenant-monitoring", "credit-risk"]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langgraph>=0.4",
    "pydantic>=2.6",
]

[project.scripts]
ks-cookbook-covenant-monitor = "loan_covenant_monitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loan_covenant_monitor"]
